--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -114,6 +114,34 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-31">
+                                <div class="col-md-3">
+                                    <a href="/news/article-140040.htm" class="xcblog-blog-url">
+                                        <img alt="量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能" src="/uploads/20241210/f53b9e12399528081423c47a3ef36473.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-140040.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能                                        </h3>
+                                    </a>
+                                    <p>在当今互联网高度发达的时代，网络限制、区域封锁、广告骚扰等问题始终困扰着用户。无论是想流畅观看海外视频，还是希望摆脱烦人的广告弹窗，普通工具往往难以兼顾所有需求。而Quantumult（量子ULT）作</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-30">
+                                <div class="col-md-3">
+                                    <a href="/news/article-139683.htm" class="xcblog-blog-url">
+                                        <img alt="解锁网络自由：Clash代理节点选购与小火箭配置终极指南" src="/uploads/20241210/80923e8adcaff7112f1dac91ed307e74.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-139683.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            解锁网络自由：Clash代理节点选购与小火箭配置终极指南                                        </h3>
+                                    </a>
+                                    <p>引言：数字时代的网络困境与突围之道  在信息高度互联的今天，网络访问自由却成为全球网民共同面临的挑战。从学术研究到商业情报，从文化交流到娱乐消遣，地理限制和网络审查筑起了一道道无形的高墙。而Clash</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-29">
                                 <div class="col-md-3">
                                     <a href="/news/article-139331.htm" class="xcblog-blog-url">
@@ -226,34 +254,6 @@
                                     <p>前言：数字时代的网络突围战  在这个信息爆炸的时代，互联网已成为现代人不可或缺的"数字氧气"。然而，各种网络限制如同无形的围墙，将我们与世界割裂。作为网络自由探索者，我深知一台搭载梅林固件的AC530</p>
                                 </div>
                             </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-21">
-                                <div class="col-md-3">
-                                    <a href="/news/article-136467.htm" class="xcblog-blog-url">
-                                        <img alt="V2Ray突然失效？从入门到精通的全方位排错手册" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-136467.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            V2Ray突然失效？从入门到精通的全方位排错手册                                        </h3>
-                                    </a>
-                                    <p>引言：当科技自由遭遇数字高墙  在互联网成为现代人"第二呼吸系统"的今天，V2Ray以其模块化设计和抗检测特性，成为突破网络封锁的瑞士军刀。但当某天清晨，你发现熟悉的V2Ray客户端突然变成灰色图标，</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-20">
-                                <div class="col-md-3">
-                                    <a href="/news/article-136112.htm" class="xcblog-blog-url">
-                                        <img alt="全面掌握GitHub Clash：从入门到精通的完整指南" src="/uploads/20241210/bee850a451a58a41feb235bce091be6a.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-136112.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            全面掌握GitHub Clash：从入门到精通的完整指南                                        </h3>
-                                    </a>
-                                    <p>在当今互联网环境中，网络访问自由已成为许多用户的迫切需求。GitHub Clash作为一款开源的网络代理工具，凭借其强大的功能和灵活的配置选项，迅速成为技术爱好者和普通用户突破网络限制的首选方案。本文</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-07/page-2.htm">2</a></li><li><a href="/date/2025-07/page-3.htm">3</a></li> <li><a href="/date/2025-07/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -264,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-134100.htm" title="科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南">科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南</a></li>
-                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-138958.htm" title="手机vmess节点完全攻略：从原理到实战的科学上网指南">手机vmess节点完全攻略：从原理到实战的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-137182.htm" title="网络代理工具的多元宇宙：从Clash到V2Ray的深度探索之旅">网络代理工具的多元宇宙：从Clash到V2Ray的深度探索之旅</a></li>
-                        <li class="py-2"><a href="/news/article-129524.htm" title="科学上网工具全解析：从原理到实战的深度评测与排行">科学上网工具全解析：从原理到实战的深度评测与排行</a></li>
-                        <li class="py-2"><a href="/news/article-133499.htm" title="突破网络限制：Clash免流设置终极指南与深度实践">突破网络限制：Clash免流设置终极指南与深度实践</a></li>
-                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-130567.htm" title="突破网络限制：v2rayng免费节点获取与使用全攻略">突破网络限制：v2rayng免费节点获取与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-125143.htm" title="突破网络边界：科学上网代理插件的终极使用手册">突破网络边界：科学上网代理插件的终极使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-128144.htm" title="从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南">从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-130917.htm" title="手机B站科学上网失效的深层原因与实用解决方案全解析">手机B站科学上网失效的深层原因与实用解决方案全解析</a></li>
+                        <li class="py-2"><a href="/news/article-139683.htm" title="解锁网络自由：Clash代理节点选购与小火箭配置终极指南">解锁网络自由：Clash代理节点选购与小火箭配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-127470.htm" title="深度探索Clash2.5.8：从入门到精通的代理工具全攻略">深度探索Clash2.5.8：从入门到精通的代理工具全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-137182.htm" title="网络代理工具的多元宇宙：从Clash到V2Ray的深度探索之旅">网络代理工具的多元宇宙：从Clash到V2Ray的深度探索之旅</a></li>
+                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-127123.htm" title="突破网络边界：iOS设备上V2Ray的完整配置与使用指南">突破网络边界：iOS设备上V2Ray的完整配置与使用指南</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +285,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
