--- a/date/2025-07/page-2.htm
+++ b/date/2025-07/page-2.htm
@@ -114,6 +114,34 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-21">
+                                <div class="col-md-3">
+                                    <a href="/news/article-136467.htm" class="xcblog-blog-url">
+                                        <img alt="V2Ray突然失效？从入门到精通的全方位排错手册" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-136467.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            V2Ray突然失效？从入门到精通的全方位排错手册                                        </h3>
+                                    </a>
+                                    <p>引言：当科技自由遭遇数字高墙  在互联网成为现代人"第二呼吸系统"的今天，V2Ray以其模块化设计和抗检测特性，成为突破网络封锁的瑞士军刀。但当某天清晨，你发现熟悉的V2Ray客户端突然变成灰色图标，</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-20">
+                                <div class="col-md-3">
+                                    <a href="/news/article-136112.htm" class="xcblog-blog-url">
+                                        <img alt="全面掌握GitHub Clash：从入门到精通的完整指南" src="/uploads/20241210/bee850a451a58a41feb235bce091be6a.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-136112.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            全面掌握GitHub Clash：从入门到精通的完整指南                                        </h3>
+                                    </a>
+                                    <p>在当今互联网环境中，网络访问自由已成为许多用户的迫切需求。GitHub Clash作为一款开源的网络代理工具，凭借其强大的功能和灵活的配置选项，迅速成为技术爱好者和普通用户突破网络限制的首选方案。本文</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-19">
                                 <div class="col-md-3">
                                     <a href="/news/article-135658.htm" class="xcblog-blog-url">
@@ -226,34 +254,6 @@
                                     <p>在当今数字化时代，网络自由已成为现代生活的基本需求。然而，各种网络限制和流量管控却如同无形的枷锁，束缚着我们的网络体验。本文将为您全面解析Clash免流设置的奥秘，从基础概念到高级配置，带您领略网络自</p>
                                 </div>
                             </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-11">
-                                <div class="col-md-3">
-                                    <a href="/news/article-133180.htm" class="xcblog-blog-url">
-                                        <img alt="突破网络边界：路由器V2Ray Pro的全面解析与实战指南" src="/uploads/20241210/6b18702a1149bc1ba84e0a626adfefc3.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-133180.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            突破网络边界：路由器V2Ray Pro的全面解析与实战指南                                        </h3>
-                                    </a>
-                                    <p>引言：当路由器遇见V2Ray Pro  在数字时代的围墙花园里，路由器早已不再是简单的网络分配器，而是进化为网络自由的战略要塞。V2Ray Pro以其模块化设计和多协议支持，如同为路由器装上了隐形的翅</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-10">
-                                <div class="col-md-3">
-                                    <a href="/news/article-132748.htm" class="xcblog-blog-url">
-                                        <img alt="科学上网闪退全攻略：从根源排查到完美解决方案" src="/uploads/20241210/2af9f03fabb1b81a60645001221a2a6b.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-132748.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            科学上网闪退全攻略：从根源排查到完美解决方案                                        </h3>
-                                    </a>
-                                    <p>引言：当数字世界突然"卡壳"  在全球化信息流动的今天，科学上网已成为许多人工作学习的"数字氧气"。但当VPN客户端突然闪退，就像潜水时呼吸管突然断裂——微信消息停滞、谷歌学术页面冻结、Netflix</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/date/2025-07/">&laquo;</a></li> <li><a href="/date/2025-07/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-07/page-3.htm">3</a></li> <li><a href="/date/2025-07/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -264,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-134459.htm" title="Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术">Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术</a></li>
-                        <li class="py-2"><a href="/news/article-129524.htm" title="科学上网工具全解析：从原理到实战的深度评测与排行">科学上网工具全解析：从原理到实战的深度评测与排行</a></li>
-                        <li class="py-2"><a href="/news/article-138553.htm" title="决胜毫秒之间：F1赛事换胎策略的艺术与科学">决胜毫秒之间：F1赛事换胎策略的艺术与科学</a></li>
-                        <li class="py-2"><a href="/news/article-128144.htm" title="从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南">从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-130917.htm" title="手机B站科学上网失效的深层原因与实用解决方案全解析">手机B站科学上网失效的深层原因与实用解决方案全解析</a></li>
-                        <li class="py-2"><a href="/news/article-139331.htm" title="Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器">Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器</a></li>
-                        <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-129870.htm" title="深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答">深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答</a></li>
-                        <li class="py-2"><a href="/news/article-130567.htm" title="突破网络限制：v2rayng免费节点获取与使用全攻略">突破网络限制：v2rayng免费节点获取与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-128830.htm" title="鲨鱼机房科学上网全攻略：解锁全球网络的终极指南">鲨鱼机房科学上网全攻略：解锁全球网络的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
+                        <li class="py-2"><a href="/news/article-140040.htm" title="量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能">量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能</a></li>
+                        <li class="py-2"><a href="/news/article-135658.htm" title="第一次科学上网全攻略：从零开始解锁全球互联网">第一次科学上网全攻略：从零开始解锁全球互联网</a></li>
+                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-131621.htm" title="谷歌Play科学上网全攻略：解锁全球网络自由的终极指南">谷歌Play科学上网全攻略：解锁全球网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-125464.htm" title="突破网络边界：Shadowrocket深度使用指南与高阶配置技巧">突破网络边界：Shadowrocket深度使用指南与高阶配置技巧</a></li>
+                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +285,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
