--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -114,6 +114,34 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-11">
+                                <div class="col-md-3">
+                                    <a href="/news/article-133180.htm" class="xcblog-blog-url">
+                                        <img alt="突破网络边界：路由器V2Ray Pro的全面解析与实战指南" src="/uploads/20241210/6b18702a1149bc1ba84e0a626adfefc3.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-133180.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            突破网络边界：路由器V2Ray Pro的全面解析与实战指南                                        </h3>
+                                    </a>
+                                    <p>引言：当路由器遇见V2Ray Pro  在数字时代的围墙花园里，路由器早已不再是简单的网络分配器，而是进化为网络自由的战略要塞。V2Ray Pro以其模块化设计和多协议支持，如同为路由器装上了隐形的翅</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-10">
+                                <div class="col-md-3">
+                                    <a href="/news/article-132748.htm" class="xcblog-blog-url">
+                                        <img alt="科学上网闪退全攻略：从根源排查到完美解决方案" src="/uploads/20241210/2af9f03fabb1b81a60645001221a2a6b.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-132748.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            科学上网闪退全攻略：从根源排查到完美解决方案                                        </h3>
+                                    </a>
+                                    <p>引言：当数字世界突然"卡壳"  在全球化信息流动的今天，科学上网已成为许多人工作学习的"数字氧气"。但当VPN客户端突然闪退，就像潜水时呼吸管突然断裂——微信消息停滞、谷歌学术页面冻结、Netflix</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-09">
                                 <div class="col-md-3">
                                     <a href="/news/article-132335.htm" class="xcblog-blog-url">
@@ -222,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-134459.htm" title="Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术">Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术</a></li>
-                        <li class="py-2"><a href="/news/article-129524.htm" title="科学上网工具全解析：从原理到实战的深度评测与排行">科学上网工具全解析：从原理到实战的深度评测与排行</a></li>
-                        <li class="py-2"><a href="/news/article-138251.htm" title="突破网络限制：V2Ray安卓版从入门到精通的完整配置指南">突破网络限制：V2Ray安卓版从入门到精通的完整配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-129870.htm" title="深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答">深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答</a></li>
+                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-136467.htm" title="V2Ray突然失效？从入门到精通的全方位排错手册">V2Ray突然失效？从入门到精通的全方位排错手册</a></li>
-                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-129178.htm" title="安卓设备科学上网全攻略：SSR配置与优化指南">安卓设备科学上网全攻略：SSR配置与优化指南</a></li>
-                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
-                        <li class="py-2"><a href="/news/article-128490.htm" title="轻云V2Ray节点完全指南：从入门到精通的安全代理配置">轻云V2Ray节点完全指南：从入门到精通的安全代理配置</a></li>
+                        <li class="py-2"><a href="/news/article-138958.htm" title="手机vmess节点完全攻略：从原理到实战的科学上网指南">手机vmess节点完全攻略：从原理到实战的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
+                        <li class="py-2"><a href="/news/article-138251.htm" title="突破网络限制：V2Ray安卓版从入门到精通的完整配置指南">突破网络限制：V2Ray安卓版从入门到精通的完整配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
