--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://topproxy.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>免责申明 - 顶级代理服务器 免费订阅中文网</title>
-        <meta name="keywords" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
-        <meta name="description" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
+    <title>2025-08归档 - 顶级代理服务器 免费订阅中文网</title>
+        <meta name="keywords" content="2025-08归档顶级代理服务器 免费订阅中文网" />
+        <meta name="description" content="2025-08归档，当前是第1页" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topproxy.github.io" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
+    <meta property="og:title" content="2025-08归档 - 顶级代理服务器 免费订阅中文网" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
-        <meta property="og:description" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
+        <meta property="og:description" content="2025-08归档，当前是第1页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - 顶级代理服务器 免费订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-08归档 - 顶级代理服务器 免费订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -71,7 +71,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
     <div id="all">
             <!-- navbar-->
     <header class="header">
@@ -100,9 +100,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>免责申明</h1>
+                        <h1>2025-08 归档</h1>
                         <p class="weight-300">
-                            <a href="/">首页</a> / 免责申明
+                            <a href="/">首页</a> / 2025-08 归档
                         </p>
                     </div>
                 </div>
@@ -113,27 +113,51 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
-                        <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                        <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-03">
+                                <div class="col-md-3">
+                                    <a href="/news/article-141112.htm" class="xcblog-blog-url">
+                                        <img alt="雪云Clash深度指南：解锁高效网络自由的终极利器" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-141112.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            雪云Clash深度指南：解锁高效网络自由的终极利器                                        </h3>
+                                    </a>
+                                    <p>在当今数字化时代，网络自由与隐私保护已成为全球网民的共同诉求。无论是学术研究者需要访问国际数据库，还是普通用户希望打破内容藩篱，一款优秀的网络工具都显得至关重要。雪云Clash正是在这一背景下应运而生</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-140754.htm" class="xcblog-blog-url">
+                                        <img alt="全面解析奈油Clash X：从入门到精通的完整指南" src="/uploads/20241210/c8aeca7ec04508d834868d756fa8dda4.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-140754.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            全面解析奈油Clash X：从入门到精通的完整指南                                        </h3>
+                                    </a>
+                                    <p>在当今互联网环境下，网络访问限制成为许多用户面临的难题。奈油Clash X作为一款高效、便捷的代理工具，凭借其强大的功能和友好的界面，成为科学上网领域的热门选择。本文将深入解析奈油Clash X的方方</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-01">
+                                <div class="col-md-3">
+                                    <a href="/news/article-140392.htm" class="xcblog-blog-url">
+                                        <img alt="深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略" src="/uploads/20241210/bee850a451a58a41feb235bce091be6a.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-140392.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略                                        </h3>
+                                    </a>
+                                    <p>在当今互联网高度监管的时代，科学上网工具已成为数字原住民的必备利器。作为iOS平台上广受好评的代理工具，Shadowrocket凭借其强大的功能和灵活的配置选项，赢得了全球用户的青睐。然而，许多用户在</p>
+                                </div>
+                            </div>
+                            
+                                                    </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -142,16 +166,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-132748.htm" title="科学上网闪退全攻略：从根源排查到完美解决方案">科学上网闪退全攻略：从根源排查到完美解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-129524.htm" title="科学上网工具全解析：从原理到实战的深度评测与排行">科学上网工具全解析：从原理到实战的深度评测与排行</a></li>
+                        <li class="py-2"><a href="/news/article-129870.htm" title="深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答">深度揭秘Shadow科学上网：技术原理、实战指南与疑难解答</a></li>
+                        <li class="py-2"><a href="/news/article-130225.htm" title="在Padavan路由器上搭建vmess代理：从入门到精通的完整指南">在Padavan路由器上搭建vmess代理：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-129178.htm" title="安卓设备科学上网全攻略：SSR配置与优化指南">安卓设备科学上网全攻略：SSR配置与优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-130567.htm" title="突破网络限制：v2rayng免费节点获取与使用全攻略">突破网络限制：v2rayng免费节点获取与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-136467.htm" title="V2Ray突然失效？从入门到精通的全方位排错手册">V2Ray突然失效？从入门到精通的全方位排错手册</a></li>
+                        <li class="py-2"><a href="/news/article-127799.htm" title="突破网络限制：Surfboard全方位翻墙指南与深度体验报告">突破网络限制：Surfboard全方位翻墙指南与深度体验报告</a></li>
                         <li class="py-2"><a href="/news/article-139331.htm" title="Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器">Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器</a></li>
-                        <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-125464.htm" title="突破网络边界：Shadowrocket深度使用指南与高阶配置技巧">突破网络边界：Shadowrocket深度使用指南与高阶配置技巧</a></li>
-                        <li class="py-2"><a href="/news/article-131621.htm" title="谷歌Play科学上网全攻略：解锁全球网络自由的终极指南">谷歌Play科学上网全攻略：解锁全球网络自由的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-132335.htm" title="从零开始掌握Clash：打造稳定免费的全局代理方案">从零开始掌握Clash：打造稳定免费的全局代理方案</a></li>
-                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-124173.htm" title="突破网络边界：2024年最全面的科学上网终极指南">突破网络边界：2024年最全面的科学上网终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-128490.htm" title="轻云V2Ray节点完全指南：从入门到精通的安全代理配置">轻云V2Ray节点完全指南：从入门到精通的安全代理配置</a></li>
-                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-140392.htm" title="深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略">深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略</a></li>
                     </ul>
     </div>
 </div>
